--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Retrospect by TEMPLATED</title>
+		<title>Portfolio François Castagnos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="index.html">Retrospect</a></h1>
+				<h1><a href="index.html">Portfolio FC</a></h1>
 				<a href="#nav">Menu</a>
 			</header>
 
@@ -26,23 +26,23 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="projects.html">Projets</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
 				<i class="icon fa-diamond"></i>
-				<h2>Etiam adipiscing</h2>
-				<p>Magna feugiat lorem dolor egestas</p>
+				<h2>Welcome</h2>
+				<p>Here you will find some of my work</p>
 				<ul class="actions">
-					<li><a href="#" class="button big special">Learn More</a></li>
+					<li><a href="preview" class="button big special">Let's go</a></li>
 				</ul>
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style1">
+			<section id="one" class="wrapper style1", href = "preview">
 				<div class="inner">
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
