--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="wrapper style1", href = "preview">
-				<div class="inner">
+			<section id="one" class="wrapper style1">
+				<div class="inner"><a href = "preview">
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
@@ -68,7 +68,7 @@
 							</ul>
 						</div>
 					</article>
-				</div>
+				</a></div>
 			</section>
 
 		<!-- Two -->
