--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,8 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="projects.html">Projets</a></li>
 				</ul>
 			</nav>
 
