--- a/index.html
+++ b/index.html
@@ -37,21 +37,24 @@
 				<h2>Welcome</h2>
 				<p>Here you will find some of my work</p>
 				<ul class="actions">
-					<li><a href="preview" class="button big special">Let's go</a></li>
+					<li><a href="preview" class="button big special">About me</a></li>
 				</ul>
 			</section>
 
 		<!-- One -->
 			<section id="one" class="wrapper style1">
-				<div class="inner"><a href = "preview">
+				<header class="major narrow">
+					<h2>Recent Projects</h2>
+				</header>
+				<div class="inner">
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<a href = "preview"><h2>A Deep Learning approach of video compression</h2></a>
+							<p>How can the state of the art Deep Learning tools be used to optimize the transmission of slideshows</p>
 							<ul class="actions">
 								<li>
-									<a href="#" class="button alt">More</a>
+									<a href="projects.html" class="button alt">More</a>
 								</li>
 							</ul>
 						</div>
@@ -59,7 +62,7 @@
 					<article class="feature right">
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
+							<h2>Trailee : keep track of live races</h2>
 							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
 							<ul class="actions">
 								<li>
@@ -68,7 +71,7 @@
 							</ul>
 						</div>
 					</article>
-				</a></div>
+				</div>
 			</section>
 
 		<!-- Two -->
@@ -112,7 +115,7 @@
 				<div class="inner">
 					<header class="major narrow">
 						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
+						<p>Tell me anything :)</p>
 					</header>
 					<form action="#" method="POST">
 						<div class="container 75%">
@@ -140,16 +143,10 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
+						<li><a href="https://github.com/castafra" class="icon fa-github">
+							<span class="label">GitHub</span>
 						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
+						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin">
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
