--- a/bin.html
+++ b/bin.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Resume of François C.</title>
+		<title>Elements - Retrospect by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -35,8 +35,8 @@
 			<section id="main" class="wrapper">
 				<div class="container">
 					<header class="major special">
-						<h2>François C.</h2>
-						<p>Strongly motivated Engineering student at Centralesupélec looking for an end-of-study internship in Artificial Intelligence</p>
+						<h2>Elements</h2>
+						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 					</header>
 
 					<!-- Text -->
