--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<section id="banner">
 				<i class="icon fa-diamond"></i>
 				<h2>Welcome</h2>
-				<p>Here you will find some of my work</p>
+				<p>Here is shared some of my work</p>
 				<ul class="actions">
-					<li><a href="preview" class="button big special">About me</a></li>
+					<li><a href="resume.html" class="button big special">About me</a></li>
 				</ul>
 			</section>
 
@@ -50,11 +50,11 @@
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<a href = "preview"><h2>A Deep Learning approach of video compression</h2></a>
+							<h2>A Deep Learning approach of video compression</h2>
 							<p>How can the state of the art Deep Learning tools be used to optimize the transmission of slideshows</p>
 							<ul class="actions">
 								<li>
-									<a href="projects.html" class="button alt">More</a>
+									<a href="projects.html/#1" class="button alt">More</a>
 								</li>
 							</ul>
 						</div>
