--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 						<div class="content">
 							<h2>Trailee : keep track of live races</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<p>We developped a live tracker for runners and a web interface to keep track of them</p>
 							<ul class="actions">
 								<li>
 									<a href="#" class="button alt">More</a>
