--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<h2>Get in touch</h2>
 						<p>Tell me anything :)</p>
 					</header>
-					<form action="#" method="POST">
+					<form action="mailto:noreply.fc13@gmail.com" method="POST">
 						<div class="container 75%">
 							<div class="row uniform 50%">
 								<div class="6u 12u$(xsmall)">
