--- a/projects.html
+++ b/projects.html
@@ -393,16 +393,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
+						<li><a href="https://github.com/castafra" class="icon fa-github">
+							<span class="label">GitHub</span>
 						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
+						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin">
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
