--- a/resume.html
+++ b/resume.html
@@ -38,6 +38,93 @@
 						<h2>François C.</h2>
 						<p>Strongly motivated Engineering student at Centralesupélec looking for an end-of-study internship in Artificial Intelligence</p>
 					</header>
+					<section>
+						<h3>Lists</h3>
+						<div class="row">
+							<div class="6u 12u$(xsmall)">
+
+								<h4>Unordered</h4>
+								<ul>
+									<li>Dolor pulvinar etiam magna etiam.</li>
+									<li>Sagittis adipiscing lorem eleifend.</li>
+									<li>Felis enim feugiat dolore viverra.</li>
+								</ul>
+
+								<h4>Alternate</h4>
+								<ul class="alt">
+									<li>Dolor pulvinar etiam magna etiam.</li>
+									<li>Sagittis adipiscing lorem eleifend.</li>
+									<li>Felis enim feugiat dolore viverra.</li>
+								</ul>
+
+							</div>
+							<div class="6u$ 12u$(xsmall)">
+
+								<h4>Ordered</h4>
+								<ol>
+									<li>Dolor pulvinar etiam magna etiam.</li>
+									<li>Etiam vel felis at lorem sed viverra.</li>
+									<li>Felis enim feugiat dolore viverra.</li>
+									<li>Dolor pulvinar etiam magna etiam.</li>
+									<li>Etiam vel felis at lorem sed viverra.</li>
+									<li>Felis enim feugiat dolore viverra.</li>
+								</ol>
+
+								<h4>Icons</h4>
+								<ul class="icons">
+									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+								</ul>
+
+							</div>
+						</div>
+
+						<h4>Actions</h4>
+						<ul class="actions">
+							<li><a href="#" class="button special">Special</a></li>
+							<li><a href="#" class="button">Default</a></li>
+							<li><a href="#" class="button alt">Alternate</a></li>
+						</ul>
+						<ul class="actions small">
+							<li><a href="#" class="button special small">Small</a></li>
+							<li><a href="#" class="button small">Small</a></li>
+							<li><a href="#" class="button alt small">Small</a></li>
+						</ul>
+						<div class="row">
+							<div class="3u 6u(small) 12u$(xsmall)">
+								<ul class="actions vertical">
+									<li><a href="#" class="button special">Vertical</a></li>
+									<li><a href="#" class="button">Vertical</a></li>
+									<li><a href="#" class="button alt">Vertical</a></li>
+								</ul>
+							</div>
+							<div class="3u 6u$(small) 12u$(xsmall)">
+								<ul class="actions vertical small">
+									<li><a href="#" class="button special small">Small</a></li>
+									<li><a href="#" class="button small">Small</a></li>
+									<li><a href="#" class="button alt small">Small</a></li>
+								</ul>
+							</div>
+							<div class="3u 6u(small) 12u$(xsmall)">
+								<ul class="actions vertical">
+									<li><a href="#" class="button special fit">Fit</a></li>
+									<li><a href="#" class="button fit">Fit</a></li>
+									<li><a href="#" class="button alt fit">Fit</a></li>
+								</ul>
+							</div>
+							<div class="3u$ 6u$(small) 12u$(xsmall)">
+								<ul class="actions vertical small">
+									<li><a href="#" class="button special small fit">Small</a></li>
+									<li><a href="#" class="button small fit">Small</a></li>
+									<li><a href="#" class="button alt small fit">Small</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
 
 					<!-- Text -->
 						<section>
@@ -393,16 +480,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
-							<span class="label">Facebook</span>
+						<li><a href="https://github.com/castafra" class="icon fa-github">
+							<span class="label">GitHub</span>
 						</a></li>
-						<li><a href="#" class="icon fa-twitter">
-							<span class="label">Twitter</span>
-						</a></li>
-						<li><a href="#" class="icon fa-instagram">
-							<span class="label">Instagram</span>
-						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
+						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin">
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
