--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<i class="icon fa-diamond"></i>
+				<i class="portrait"><img src="images/round_cv_img.png" alt="" style='height: 100%; width: 100%; object-fit: contain'/></i>
 				<h2>Welcome</h2>
 				<p>Here is shared some of my work</p>
 				<ul class="actions">
@@ -48,25 +48,25 @@
 				</header>
 				<div class="inner">
 					<article class="feature left">
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/teams_cat.jpg" alt="" /></span>
 						<div class="content">
 							<h2>A Deep Learning approach of video compression</h2>
 							<p>How can the state of the art Deep Learning tools be used to optimize the transmission of slideshows</p>
 							<ul class="actions">
 								<li>
-									<a href="projects.html/#1" class="button alt">More</a>
+									<a href="projects.html#1" class="button alt">More</a>
 								</li>
 							</ul>
 						</div>
 					</article>
 					<article class="feature right">
-						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+						<span class="image"><img src="images/traile.png" alt="" /></span>
 						<div class="content">
-							<h2>Trailee : keep track of live races</h2>
+							<h2>Trail-e : keep track of live races</h2>
 							<p>We developped a live tracker for runners and a web interface to keep track of them</p>
 							<ul class="actions">
 								<li>
-									<a href="#" class="button alt">More</a>
+									<a href="projects.html#2" class="button alt">More</a>
 								</li>
 							</ul>
 						</div>
@@ -74,38 +74,16 @@
 				</div>
 			</section>
 
-		<!-- Two -->
-			<section id="two" class="wrapper special">
-				<div class="inner">
-					<header class="major narrow">
-						<h2>Aliquam Blandit Mauris</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
-					</header>
-					<div class="image-grid">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
-					</div>
-					<ul class="actions">
-						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
-					</ul>
-				</div>
-			</section>
-
+	
 		<!-- Three -->
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
 					<header class="major narrow	">
-						<h2>Magna sed consequat tempus</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+						<h2>Source Code </h2>
+						<p>You can find the source code of the different projects depicted here on my GitHub repository</p>
 					</header>
 					<ul class="actions">
-						<li><a href="#" class="button big alt">Magna feugiat</a></li>
+						<li><a href="https://github.com/castafra" class="button big alt" target="_blank">View GitHub</a></li>
 					</ul>
 				</div>
 			</section>
@@ -143,10 +121,10 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/castafra" class="icon fa-github">
+						<li><a href="https://github.com/castafra" class="icon fa-github" target="_blank">
 							<span class="label">GitHub</span>
 						</a></li>
-						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin">
+						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin" target="_blank">
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
