--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Retrospect by TEMPLATED</title>
+		<title>Projets by FC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -35,8 +35,8 @@
 			<section id="main" class="wrapper">
 				<div class="container">
 					<header class="major special">
-						<h2>Elements</h2>
-						<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+						<h2>Projects</h2>
+						<p>More details</p>
 					</header>
 
 					<!-- Text -->
@@ -87,7 +87,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<!-- Lists -->
 						<section>
 							<h3>Lists</h3>
-							<div class="row">
+							<div class="row" id = "1">
 								<div class="6u 12u$(xsmall)">
 
 									<h4>Unordered</h4>
@@ -177,7 +177,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<section>
 							<h3>Table</h3>
 							<h4>Default</h4>
-							<div class="table-wrapper">
+							<div class="table-wrapper" id = "2">
 								<table>
 									<thead>
 										<tr>
