--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<span class="image"><img src="images/teams_cat.jpg" alt="" /></span>
 						<div class="content">
 							<h2>A Deep Learning approach of video compression</h2>
-							<p>How can the state of the art Deep Learning tools be used to optimize the transmission of slideshows</p>
+							<p>How can the state of the art Deep Learning tools be used to optimize the transmission of slideshows ?</p>
 							<ul class="actions">
 								<li>
 									<a href="projects.html#1" class="button alt">More</a>
@@ -130,8 +130,8 @@
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled.</li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+						<li>Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>.</li>
+						<li>Design: <a href="http://templated.co" target="_blank">TEMPLATED</a>.</li>
 					</ul>
 				</div>
 			</footer>
