--- a/resume.html
+++ b/resume.html
@@ -132,17 +132,17 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/castafra" class="icon fa-github">
+						<li><a href="https://github.com/castafra" class="icon fa-github" target="_blank">
 							<span class="label">GitHub</span>
 						</a></li>
-						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin">
+						<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin" target="_blank">
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled.</li>
-						<li>Images: <a href="http://unsplash.com">Unsplash</a>.</li>
-						<li>Design: <a href="http://templated.co">TEMPLATED</a>.</li>
+						<li>Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>.</li>
+						<li>Design: <a href="http://templated.co" target="_blank">TEMPLATED</a>.</li>
 					</ul>
 				</div>
 			</footer>
