--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
 								<h4>Language Skills</h4>
 								<ul class="alt">
 									<li><b>French</b>  Mother tongue</li>
-									<li><b>English</b>  Fluent<br>Passed the Cambridge English Advanced (CAE) exam</li>
+									<li><b>English</b>  Fluent<br>Passed the Cambridge English Advanced (CAE) exam <br>TOEFL ITP (650/677)</li>
 									<li><b>Spanish</b>  Intermediate</li>
 								</ul>
 								<h4>Technical Skills</h4>
@@ -116,7 +116,7 @@
 									<h4>Hobbies</h4>
 								</header>
 								<p><b>Rugby</b> (French University League with the school team)<br>
-									<b>AI</b> (Developed an autonomous car using a Raspberry Pi, Kaggle Competitions)<br>
+									<b>Artificial Intelligence</b> (Developed an autonomous car using a Raspberry Pi, Kaggle Competitions)<br>
 								<b>Travelling</b></p>
 								
 
