added new project

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
 				</header>
 				<div class="inner">
 					<article class="feature left">
+						<span class="image"><img src="images/logo_diurnai.png" alt="" /></span>
+						<div class="content">
+							<h2>diurn.ai : An intelligent news assistant on Instagram</h2>
+							<p>Retrieving the everyday news and condensing them in an Instagram post</p>
+							<ul class="actions">
+								<li>
+									<a href="projects.html#3" class="button alt">More</a>
+								</li>
+							</ul>
+						</div>
+					</article>
+					<article class="feature left">
 						<span class="image"><img src="images/teams_cat.jpg" alt="" /></span>
 						<div class="content">
 							<h2>A Deep Learning approach of video compression</h2>
