--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,30 @@
 						<p>More details</p>
 					</header>
 
+					<section id="3" class="wrapper style5 special">
+						<div class="inner">
+							<header class="major narrow	">
+								<h2>diurn.ai : An intelligent news assistant on Instagram</h2>
+								<p>Retrieving the everyday news and condensing them in an Instagram post</p>
+							</header>
+							<ul class="actions">
+								<li><a href="https://www.instagram.com/diurn.ai/" class="button big special" target="_blank">Vew Instagram</a></li>
+								<li><a href="https://github.com/castafra/diurn-ai" class="button big alt" target="_blank">View Repo</a></li>
+							</ul>
+						</div>
+					</section>
+
+					<!-- Text -->
+					<section>
+						<br>
+						<header>
+						<h3>Overview</h3>
+						</header>
+						<p>I started this project as a way to learn more about NLP while developping a useful application. <b>diurn.ai</b> is an Instragram page that condenses the news scrapped by a python algorithm.</p>
+
+						<hr />
+					</section>
+
 					<section id="1" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major narrow	">
@@ -53,17 +77,16 @@
 					</section>
 
 					<!-- Text -->
-						<section>
-							<br>
-							<header>
-							<h3>Overview</h3>
-							</header>
-							<p>The video internet traffic is significantly on the rise : it will reach 82% of total traffic by 2022 (Cisco Annual Internet Report white paper 2020).​ In the meantime, Deep Learning is widening the scope of possibilities for AI-based video compression algorithms</p>
-							<p>This work was developped a part of a end of study projet lead by Françosi C. and Mehdi A. The goal is to find innovative methods to transmit
-								videos such as slideshows.</p>
+					<section>
+						<br>
+						<header>
+						<h3>Overview</h3>
+						</header>
+						<p>The video internet traffic is significantly on the rise : it will reach 82% of total traffic by 2022 (Cisco Annual Internet Report white paper 2020).​ In the meantime, Deep Learning is widening the scope of possibilities for AI-based video compression algorithms</p>
+						<p>This work was developped a part of a end of study projet lead by Françosi C. and Mehdi A. The goal is to find innovative methods to transmit	videos such as slideshows.</p>
 
-							<hr />
-						</section>
+						<hr />
+					</section>
 
 						
 
