--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
 
 								<h3 class="blocktitle">Contact</h3>
 								<ul class="icons blocktitle">
-									<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin">
+									<li><a href="https://www.linkedin.com/in/fran%C3%A7ois-castagnos-a28799167/" class="icon fa-linkedin" target="_blank">
 										<span class="label">LinkedIn</span>
 									</a></li>
 								</ul>
@@ -85,6 +85,8 @@
 								</header>
 								<p>Worked in the department of outdoor work on the building site of a tower designed by
 									Franck Gehry in Arles.</p>
+
+
 								<h3 class="blocktitle">Education</h3>
 								<header>
 									<h4>2017-PRESENT | CENTRALESUPÉLEC PARIS </h4>
@@ -106,6 +108,23 @@
 									<h4>2014 | BACCALAUREATE IN SCIENCE, SPECIALIZING IN MATHS</h4>
 								</header>
 								<p>US equivalent to High school degree + 1 year, with highest honors.</p>
+
+
+								<h3 class="blocktitle">Projects</h3>
+								<header>
+									<h4>Diurn.ai : a Python algorithm to scrap news and publish them on instagram</h4>
+								</header>
+								<p>A <b>NLP</b> personal project using Python (Tensorflow, Selenium, BeautifulSoup)<br>
+									Goal : Summarizing the everyday news and post them automatically on an Instagram page <br>
+									For more info : <a href = "https://www.instagram.com/diurn.ai/" target="_blank">view result</a>, 
+								<a href = "https://github.com/castafra/diurn-ai">view repository</a>.</p>
+								<header>
+									<h4>Construction of a miniaturized autonomous vehicle</h4>
+								</header>
+								<p>Transformed a remote controlled car into an <b>autonomous vehicle</b> using a Raspberry Pi and Python (OpenCV, Tensorflow Lite)</p>
+								
+
+
 								<h3 class="blocktitle">EXTRACURRICULAR ACTIVITIES</h3>
 								<header>
 									<h4>Experience</h4>
