--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<article class="feature left">
 						<span class="image"><img src="images/logo_diurnai.png" alt="" /></span>
 						<div class="content">
-							<h2>diurn.ai : An intelligent news assistant on Instagram</h2>
+							<h2>diurn.ai : The instagram page that summarizes the news</h2>
 							<p>Retrieving the everyday news and condensing them in an Instagram post</p>
 							<ul class="actions">
 								<li>
