--- a/projects.html
+++ b/projects.html
@@ -42,11 +42,12 @@
 					<section id="3" class="wrapper style5 special">
 						<div class="inner">
 							<header class="major narrow	">
-								<h2>diurn.ai : An intelligent news assistant on Instagram</h2>
+								<h2>diurn.ai : The instagram page that summarizes the news</h2>
 								<p>Retrieving the everyday news and condensing them in an Instagram post</p>
 							</header>
 							<ul class="actions">
-								<li><a href="https://www.instagram.com/diurn.ai/" class="button big special" target="_blank">Vew Instagram</a></li>
+								<li><a href="diurn-ai.html" class="button big special">Vew Article</a></li>
+								<li><a href="https://www.instagram.com/diurn.ai/" class="button big alt" target="_blank">Vew Instagram</a></li>
 								<li><a href="https://github.com/castafra/diurn-ai" class="button big alt" target="_blank">View Repo</a></li>
 							</ul>
 						</div>
