--- a/projects/diurn-ai-raw.html
+++ b/projects/diurn-ai-raw.html
@@ -1091,7 +1091,7 @@ body {
   font-size: 13px;
   line-height: 1.42857143;
   color: #000;
-  background-color: rgb(255, 255, 255);
+  background-color: #fff;
 }
 input,
 button,
@@ -11429,12 +11429,10 @@ div#notebook {
   -webkit-box-sizing: border-box;
   min-height: 100%;
 }
-
-body {background-color: rgba(32, 53, 110, 0.815);}
 @media not print {
   #notebook-container {
     padding: 15px;
-    background-color: rgb(255, 255, 255);
+    background-color: #fff;
     min-height: 0;
     -webkit-box-shadow: 0px 0px 12px 1px rgba(87, 87, 87, 0.2);
     box-shadow: 0px 0px 12px 1px rgba(87, 87, 87, 0.2);
