--- a/projects/diurn-ai-raw.html
+++ b/projects/diurn-ai-raw.html
@@ -51,6 +51,8 @@ video {
   display: inline-block;
   vertical-align: baseline;
 }
+body {
+  background-color: #1E2832;}
 audio:not([controls]) {
   display: none;
   height: 0;
