--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
 						<h3>Overview</h3>
 						</header>
 						<p>The video internet traffic is significantly on the rise : it will reach 82% of total traffic by 2022 (Cisco Annual Internet Report white paper 2020).​ In the meantime, Deep Learning is widening the scope of possibilities for AI-based video compression algorithms</p>
-						<p>This work was developped a part of a end of study projet lead by Françosi C. and Mehdi A. The goal is to find innovative methods to transmit	videos such as slideshows.</p>
+						<p>This work was developped a part of a end of study projet lead by François Castagnos and Mehdi Arsaoui. The goal is to find innovative methods to transmit	videos such as slideshows.</p>
 
 						<hr />
 					</section>
