--- a/projects/diurn-ai-raw.html
+++ b/projects/diurn-ai-raw.html
@@ -52,7 +52,7 @@ video {
   vertical-align: baseline;
 }
 body {
-  background-color: #1E2832;}
+  background-color: #1E2832 !important;}
 audio:not([controls]) {
   display: none;
   height: 0;
