--- a/projects/diurn-ai-raw.html
+++ b/projects/diurn-ai-raw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-
+  <link rel="icon" href="images/logo-fc.png">
 <title>diurn-ai-raw</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
@@ -13125,7 +13125,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="images/ig-showcase.png"></p>
+<p><img src="images/ig-showcase.PNG"></p>
 
 </div>
 </div>
