--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 								<p>Retrieving the everyday news and condensing them in an Instagram post</p>
 							</header>
 							<ul class="actions">
-								<li><a href="projects/diurn-ai-raw.html" class="button big special">Vew Article</a></li>
+								<li><a href="projects/diurn-ai.html" class="button big special">Vew Article</a></li>
 								<li><a href="https://www.instagram.com/diurn.ai/" class="button big alt" target="_blank">Vew Instagram</a></li>
 								<li><a href="https://github.com/castafra/diurn-ai" class="button big alt" target="_blank">View Repo</a></li>
 							</ul>
