error image BERT

--- a/projects/diurn-ai.html
+++ b/projects/diurn-ai.html
@@ -13341,7 +13341,7 @@ For the summarization task, it becomes :
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <div>
-<img src="images/bert.jpg" width="600"/>
+<img src="images/BERT.jpg" width="600"/>
 </div>
 </div>
 </div>
