ADD aicompression project

--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,8 @@
 								<p>How can the state of the art Deep Learning tools be used to optimize the transmission of slideshows ?</p>
 							</header>
 							<ul class="actions">
-								<li><a href="" class="button big special" target="_blank">Demo Coming Soon</a></li>
+								<li><a href="projects/Report_project_3A.pdf" class="button big special" target="_blank">View Article</a></li>
+								<li><a href="images/ai-compression.gif" class="button big special" target="_blank">View Demo</a></li>
 								<li><a href="https://github.com/castafra/aicompression" class="button big alt" target="_blank">View Repo</a></li>
 							</ul>
 						</div>
