--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,6 @@
 				<div class="container">
 					<header class="major special">
 						<h2>François C.</h2>
-						<p>Strongly motivated Engineering student at Centralesupélec looking for an end-of-study internship in Artificial Intelligence</p>
 					</header>
 					<section>
 						<div class="row">
@@ -63,6 +62,7 @@
 									<li><b>Software</b><br>   Microsoft Office<br>   Adobe Creative Cloud : Premiere Pro, Photoshop, Illustrator<br>   SAS</li>
 									<li><b>Data Base</b><br>   SQL, MongoDB, Neo4j, Spark</li>
 									<li><b>Others</b><br>  Linux, Arduino, Raspberry Pi, Jenkins, Docker</li>
+									<li> <a href = "projects/Resume_Castagnos.pdf" target="_blank">Download pdf version</a><br></li>
 								</ul>
 
 							</div>
@@ -95,7 +95,7 @@
 										and <i>Computer Science</i></p>
 								</header>
 								<p>End of Studies project (200 Hours) : Currently developing a <b>Deep Learning</b> solution to
-									identify and reproduce the different parts of an image to optimize <b>video compression</b>.<br>
+									identify and reproduce the different parts of an image to optimize <b>video compression</b>. For more info : <a href = "projects/Report_project_3A.pdf" target="_blank">view report</a><br>
 									Worked on a 50-hour <b>Data Science</b> 3-person school team project on predicting sleep
 									stages – in collaboration with DREEM, FRANCE.<br>
 									Worked on a 150-hour <b>Robotic</b> 3-person school team project to automate a 5-axis robot
